--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Check Out
     - uses: actions/checkout@v3
+      with:
+        token: ${{ secrets.YML_CONFIG_CREDENTIAL }}
+        submodules: true
     - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
