--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -26,11 +26,26 @@ jobs:
         with:
           token: ${{ secrets.YML_CONFIG_CREDENTIAL }}
           submodules: true
+
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
           java-version: '11'
           distribution: 'temurin'
+
+      - name: Setup MySQL
+        uses: mirromutth/mysql-action@v1.1
+        with:
+          host port: 3306
+          container port: 3306
+          character set server: utf8mb4
+          collation server: utf8mb4_general_ci
+          mysql version: 8.0.31
+          mysql root password: dandi123
+          mysql database: test
+          mysql user: root
+          mysql password: dandi123
+
 
       - name: Build with Gradle
         uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
