--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -26,6 +26,7 @@ jobs:
         with:
           token: ${{ secrets.YML_CONFIG_CREDENTIAL }}
           submodules: true
+
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
@@ -35,7 +36,7 @@ jobs:
       - name: Build with Gradle
         uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
         with:
-          arguments: clean build
+          arguments: clean build -x test
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -51,6 +52,7 @@ jobs:
             --ignore-hidden-files \
             --s3-location s3://$S3_BUCKET_NAME/$GITHUB_SHA.zip \
             --source .
+
       - name: Deploy to AWS EC2 from S3
         run: |
           aws deploy create-deployment \
