ci: ci script에 localstack 구축 코드 추가

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,25 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    services:
+      localstack:
+        image: localstack/localstack
+        env:
+          SERVICES: s3
+          DEFAULT_REGION: us-east-1
+          DATA_DIR: /tmp/localstack/data
+          AWS_ACCESS_KEY_ID: localstack-access-key
+          AWS_SECRET_ACCESS_KEY: localstack-secret-key
+          AWS_REGION: us-east-1
+        ports:
+          - 4566:4566
+        options: >-
+          --name=localstack
+          --health-cmd="curl -sS 127.0.0.1:4566 || exit 1"
+          --health-interval=5s
+          --health-timeout=5s
+          --health-retries=3
+
     steps:
       - name: Check Out
         uses: actions/checkout@v3
