--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ dependencies {
 	testImplementation 'org.mockito:mockito-inline'
 
 	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.14'
+	implementation("net.gpedro.integrations.slack:slack-webhook:1.4.0")
 }
 
 configurations {
