--- a/src/main/resources/log4j2/log4j2-dev.yml
+++ b/src/main/resources/log4j2/log4j2-dev.yml
@@ -10,8 +10,8 @@ Configuration:
   Appenders:
     RollingFile:
       name: RollingFile_Appender
-      fileName: ${log-dir}/logfile.log
-      filePattern: "${log-dir}logfile-%d{yyyy-MM-dd}.%i.txt"
+      fileName: logfile.log
+      filePattern: "${log-dir}/logfile-%d{yyyy-MM-dd}.%i.txt"
       PatternLayout:
         pattern: "%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{35} - %msg%n"
       immediateFlush: false
