test: test에서 사용할 CloudFront Url System property 설정

--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,10 @@ dependencyManagement {
 	}
 }
 
+test {
+	systemProperty "imageAccessUrl", "www.cloudFront.com/"
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
