infra: 로그 환경 전체 비동기에서 동기 + 비동기로 변경

--- a/src/main/resources/log4j2/log4j2-dev.yml
+++ b/src/main/resources/log4j2/log4j2-dev.yml
@@ -40,12 +40,19 @@ Configuration:
       level: info
       AppenderRef:
         - ref: RollingFile_Appender
-    Logger:
-      name: dandi.dandi
+    AsyncLogger:
+      name: asyncLogger
       additivity: false
       level: debug
       includeLocation: false
       AppenderRef:
         - ref: RollingFile_Appender
+#    SyncLogger:
+#      name: syncLogger
+#      additivity: false
+#      level: debug
+#      includeLocation: false
+#      AppenderRef:
+#        - ref: RollingFile_Appender
 
 
