--- a/src/main/resources/log4j2/log4j2-local.yml
+++ b/src/main/resources/log4j2/log4j2-local.yml
@@ -14,8 +14,8 @@ Configuration:
       level: info
       AppenderRef:
         ref: Console_Appender
-    Logger:
-      name: dandi.dandi
+    AsyncLogger:
+      name: asyncLogger
       additivity: false
       level: debug
       AppenderRef:
