--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-batch'
 
 	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.13'
 	implementation "org.testcontainers:localstack:1.16.3"
@@ -39,6 +40,7 @@ dependencies {
 	implementation group: 'com.lmax', name: 'disruptor', version: '3.4.2'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation("org.springframework.batch:spring-batch-test")
 	testImplementation 'io.rest-assured:rest-assured:4.4.0'
 	testImplementation group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
 	testImplementation 'org.mockito:mockito-inline'
