infra: CODE_DEPLOY_DEPLOYMENT_GROUP_NAME 변경

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,7 +10,7 @@ env:
   AWS_REGION: ap-northeast-2
   S3_BUCKET_NAME: dandi-cd
   CODE_DEPLOY_APPLICATION_NAME: dandi-code-deploy
-  CODE_DEPLOY_DEPLOYMENT_GROUP_NAME: dandi-dev
+  CODE_DEPLOY_DEPLOYMENT_GROUP_NAME: dandi-was
 
 permissions:
   contents: read
